--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "GNU"
 python = "3.9.4"
 fastapi = "^0.67.0"
 black = "^21.7b0"
-pydantic = {extras = ["dotenv"], version = "^1.8.2"}
+pydantic = "^1.8.2"
 python-env = "^1.0.0"
 gunicorn = "^20.1.0"
 loguru = "^0.5.3"
