--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-appdirs==1.4.4; python_full_version >= "3.6.2"
+appdirs==1.4.4;  python_full_version >= "3.6.2"
 arrow==1.1.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
 asgiref==3.4.1; python_version >= "3.6"
 binaryornot==0.4.4; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
@@ -33,7 +33,6 @@ pymongo==3.12.0; python_full_version >= "3.5.2"
 pyreadline==2.1; platform_system == "Windows"
 pyrepl==0.9.0
 python-dateutil==2.8.2; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
-python-dotenv==0.19.0; python_full_version >= "3.6.1" and python_version >= "3.6"
 python-env==1.0.0
 python-slugify==5.0.2; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
 regex==2021.8.3; python_full_version >= "3.6.2"
@@ -42,9 +41,8 @@ six==1.16.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" an
 starlette==0.14.2; python_version >= "3.6"
 text-unidecode==1.3; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
 tomli==1.2.1; python_version >= "3.6" and python_full_version >= "3.6.2"
-typed-ast==1.4.3; python_version < "3.8" and python_full_version >= "3.6.2"
 typer==0.3.2; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
-typing-extensions==3.10.0.0; python_version < "3.8" and python_full_version >= "3.6.2" and python_version >= "3.6" and python_full_version < "4.0.0"
+typing-extensions==3.10.0.0; python_full_version >= "3.6.1" and python_version >= "3.6"
 urllib3==1.26.6; python_full_version >= "3.6.1" and python_version < "4" and python_full_version < "4.0.0"
 uvicorn==0.14.0
 win32-setctime==1.0.3; sys_platform == "win32" and python_version >= "3.5"
