--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,6 @@ pdbpp = "^0.10.3"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start = "start"
