--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ gunicorn = "^20.1.0"
 loguru = "^0.5.3"
 motor = "^2.5.0"
 uvicorn = "^0.14.0"
+pandas = "1.2.4"
 
 
 [tool.poetry.dev-dependencies]
