--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ loguru = "^0.5.3"
 motor = "^2.5.0"
 uvicorn = "^0.14.0"
 pandas = "^1.3.1"
+pymongo = {extras = ["srv"], version = "^3.12.0"}
 
 
 [tool.poetry.dev-dependencies]
